feat: [init-API] test api using EF core

--- a/ERP.Bases/appsettings.json
+++ b/ERP.Bases/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "User ID=root;Password=MpQS6aQZV3kZcupgmNSPSYXlTMGiatFk;Server=dpg-cl9naedo7jlc73fg91vg-a.singapore-postgres.render.com;Port=5432;Database=erpdatabase_r6q5;"
+  }
 }
