--- a/ERP.AST/ERP.AST.csproj
+++ b/ERP.AST/ERP.AST.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ERP.Databases\ERP.Databases.csproj" />
+    <ProjectReference Include="..\ERP.Bases\ERP.Bases.csproj" />
   </ItemGroup>
 
 </Project>
